2005-03-31  Paolo Mantegazza  <mantegazza@aero.polimi.it>

        * base/include/asm-i386/rtai_hal.*: rt_restore_global_flags
          rewritten.

2005-03-30  Roberto Bucher  <roberto.bucher@supsi.ch>

	* rtai-lab/scilab/devices/mbx_send_if: Corrected problem with remote
	  IP number
	* rtai-lab/scilab/devices/rtai_sem: Added support for scicos semaphores
	* rtai-mab/scilab/macros/RTAI: Forced code regeneration for scicos 
	  blocks (new version of the interface to the libsciblk.a library)

2005-03-30  Michael Neuhauser  <mike@firmix.at>

	* base/sched/sched.*: fixed an improper programming of the timer
	  in oneshot mode, when Linux timer is used.

2005-03-30  Roberto Bucher  <roberto.bucher@supsi.ch>

	* rtai-lab/scilab/devices/mbx_receive_if: Corrected problem with remote
	IP number

2005-03-23  Roberto Bucher  <roberto.bucher@supsi.ch>

	* rtai-lab/scilab/macros/RTAI: Modified text in some blocks

2005-03-23  Paolo Mantegazza  <mantegazza@aero.polimi.it>

	* base/sched/sched.c: keep ended hard kthreads pooled for reuse.

2005-03-22  Paolo Mantegazza  <mantegazza@aero.polimi.it>

	* base/include/headers-with_magic_numbers: changed definition of all 
	  magic numbers, now defined by using nam2num. All of them taken away
	  from modules coding and put in the related header.

2005-03-22  Michael Neuhauser  <mike@firmix.at>

	* base/scripts/mode-control: new script to change and check the
	  interrupt dispatching mode (immediate/piped)
	* base/scripts/GNUmakefile.*: added mode-control to EXTRA_DIST

2005-03-22  Michael Neuhauser  <mike@firmix.at>

	* testsuite/kern/latency/{latency-module.c, latency.c,
	  preempt-module.c, preempt.c}: use larger DEFAULT_PERIOD/TICK_TIME
	  for ARM systems (assumption: ARM => low-end system)
	* testsuite/kern/switches/switches-module.c: set stack-size to 4096 to
	  minimize waste and check if task creation has worked (both changes
	  were done to make this test work smoother on low-memory systems)