@@ -347,6 +347,7 @@ sharedstatedir = @sharedstatedir@
 subdirs = @subdirs@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
+EXTRA_DIST = rtai_hal.immed rtai_hal.piped
 nobase_include_HEADERS = rtai_atomic.h rtai_fpu.h rtai.h rtai_hal.h \
 	rtai_lxrt.h rtai_oldnames.h rtai_sched.h rtai_shm.h rtai_srq.h \
 	rtai_usi.h rtai_vectors.h $(am__append_1) $(am__append_2)
