@@ -1,3 +1,8 @@
+2005-03-31  Michael Neuhauser  <mike@firmix.at>
+
+	* base/arch/arm/hal/GNUmakefile.*, base/include/asm-arm/GNUmakefile.*:
+	  added piped/immed files to distribution
+
 2005-03-31  Paolo Mantegazza  <mantegazza@aero.polimi.it>
 
         * base/include/asm-i386/rtai_hal.*: rt_restore_global_flags
